Fixed "Chart Maker" input being misaligned when on mobile

--- a/src/style.css
+++ b/src/style.css
@@ -49,7 +49,6 @@ input {
   color: inherit;
   font: inherit;
   background-color: var(--light_background);
-  caret-shape: block;
   border-color: inherit;
   border-style: solid;
   width: 95%;
